--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -57,16 +57,29 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Build the Docker image
-        working-directory: ./application/sample_csharp
-        run: |
-          docker build . --file Dockerfile --tag ${{ vars.APP_IMAGE }}:$GITHUB_SHA
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-      - name: Log in to Docker Hub or your container registry
-        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push the Docker image
-        run: docker push ${{ vars.APP_IMAGE }}:$GITHUB_SHA
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: ./application/sample_csharp
+          push: true
+          tags: ${{ vars.APP_IMAGE }}:$GITHUB_SHA
+
+      # - name: Build the Docker image
+      #   working-directory: ./application/sample_csharp
+      #   run: |
+      #     docker build . --file Dockerfile --tag ${{ vars.APP_IMAGE }}:$GITHUB_SHA
+
+      # - name: Push the Docker image
+      #   run: docker push ${{ vars.APP_IMAGE }}:$GITHUB_SHA
 
   deploy-to-develop:
     needs: containerize
