--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -63,6 +63,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
+          registry: ${{ secrets.DOCKER_REGISTRY }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
@@ -70,16 +71,9 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./application/sample_csharp
+          file: Dockerfile
           push: true
           tags: ${{ vars.APP_IMAGE }}:$GITHUB_SHA
-
-      # - name: Build the Docker image
-      #   working-directory: ./application/sample_csharp
-      #   run: |
-      #     docker build . --file Dockerfile --tag ${{ vars.APP_IMAGE }}:$GITHUB_SHA
-
-      # - name: Push the Docker image
-      #   run: docker push ${{ vars.APP_IMAGE }}:$GITHUB_SHA
 
   deploy-to-develop:
     needs: containerize
