--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -57,6 +57,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ vars.APP_IMAGE }}:${GITHUB_SHA}
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -73,7 +79,7 @@ jobs:
           context: ./application/sample_csharp
           file: Dockerfile
           push: true
-          tags: ${{ vars.APP_IMAGE }}:${GITHUB_SHA}
+          tags: ${{ steps.meta.outputs.tags }}
 
   deploy-to-develop:
     needs: containerize
