--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Retag Container Image
         id: retag
         env:
-          APP_IMAGE: ${{ secrets.APP_IMAGE }}
+          APP_IMAGE: ${{ vars.APP_IMAGE }}
         working-directory: ./manifest/dev
         run: |
           IMAGE_SOURCE=$(yq eval '.spec.template.spec.containers[0].image' deployment.yaml)
