--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -53,5 +53,5 @@ jobs:
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
           git add deployment.yaml
-          git commit -m "bot: update deployment $APP_IMAGE"
+          git commit -m "bot: update deployment ${APP_IMAGE}"
           git push
