--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -52,6 +52,7 @@ jobs:
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
+          git checkout main
           git add deployment.yaml
           git commit -m "bot: update deployment ${APP_IMAGE}"
           git push
