--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -54,4 +54,4 @@ jobs:
           git config --local user.name "GitHub Actions"
           git add deployment.yaml
           git commit -m "bot: update deployment ${APP_IMAGE}"
-          git push
+          git push origin main -f
