--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -50,8 +50,9 @@ jobs:
           APP_IMAGE: ${{ steps.retag.outputs.IMAGE_TOCHANGE }}
         working-directory: ./manifest/prod
         run: |
+          git checkout main
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
           git add deployment.yaml
           git commit -m "bot: update deployment ${APP_IMAGE}"
-          git push origin main -f
+          git push
