--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -55,4 +55,4 @@ jobs:
           git config --local user.name "GitHub Actions"
           git add deployment.yaml
           git commit -m "bot: update deployment ${APP_IMAGE}"
-          git push origin main -f
+          git push
