--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -51,6 +51,7 @@ jobs:
         working-directory: ./manifest/prod
         run: |
           git checkout main
+          git pull origin main
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
           git add deployment.yaml
